# agda-ocaml

./: .hlint.yaml  BACKLOG.md  CHANGELOG.md  README.md  agda-ocaml.cabal  stack-8.0.2.yaml  stack-lts-12.yaml
app/: Main.hs
benchmark/agda-ocaml/: Main.hs  RedBlack.hs  Typed.hs  TypedExist.hs  plot.plt  run.sh
src/full/Agda/Compiler/: Malfunction.hs
src/full/Agda/Compiler/Malfunction/: AST.hs  Compiler.hs  EraseDefs.hs  Instances.hs  Main.hs  Optimize.hs  Primitive.hs  Run.hs
test/agda-ocaml/: CompilerTest.hs  Tasty.hs  Utils.hs
test/agda-ocaml/Golden/: .gitignore  FstSnd.agda  RedBlack.agda
