name:                agda-ocaml
version:             0.3.0.0
synopsis:            -
description:         Agda to OCaml
license:             BSD3
license-file:        LICENSE
author:              Jan Mas Rovira, Frederik Hanghøj Iversen
maintainer:          janmasrovira@gmail.com, hanghj@student.chalmers.se
copyright:           Jan Mas Rovira, Frederik Hanghøj Iversen
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/full
  exposed-modules:     Agda.Compiler.Malfunction.AST
                     , Agda.Compiler.Malfunction.Run
                     , Agda.Compiler.Malfunction.Compiler
                     , Agda.Compiler.Malfunction.EraseDefs
                     , Agda.Compiler.Malfunction.Main
                     , Agda.Compiler.Malfunction
                     , Agda.Compiler.Malfunction.Primitive
                     , Agda.Compiler.Malfunction.Instances
  build-depends:       Agda       >= 2.6.0
                     , base       >= 4.7  && < 5
                     , containers >= 0.5  && < 0.6
                     , extra      >= 1.5  && < 1.7
                     , filepath   >= 1.4  && < 1.5
                     , mtl        >= 2.2  && < 2.3
                     , pretty     >= 1.1  && < 1.2
                     , process    >= 1.4  && < 1.6.4
                     , temporary  >= 1.2  && < 1.4
                     , uniplate   >= 1.6  && < 1.7
  default-language:    Haskell2010

  extensions:
    NamedWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    ScopedTypeVariables
    ViewPatterns
    DeriveGeneric
    LambdaCase
    TypeApplications
    StandaloneDeriving
    GADTs
    GeneralizedNewtypeDeriving
    TypeFamilies
    MultiParamTypeClasses
    DerivingStrategies
    DeriveAnyClass
    DeriveDataTypeable

executable agda-ocaml
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , agda-ocaml
  default-language:    Haskell2010

test-suite agda-ocaml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/agda-ocaml
  other-modules:       CompilerTest
                     , Utils
  main-is:             Tasty.hs
  build-depends:       Agda
                     , agda-ocaml
                     , base
                     , bytestring   >= 0.10 && < 0.11
                     , containers   >= 0.5  && < 0.6
                     , extra        >= 1.5  && < 1.7
                     , filepath     >= 1.4  && < 1.5
                     , tasty        >= 0.11 && < 1.1.1
                     , tasty-golden >= 2.3  && < 2.4
                     , tasty-hunit  >= 0.9  && < 1.0
                     , directory    >= 1.3  && < 1.4
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark agda-ocaml-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     benchmark/agda-ocaml
  other-modules:      RedBlack
                    , Typed
                    , TypedExist
                    , Untyped
                    , AgdaListGen
  main-is:            Main.hs
  build-depends:
                       base
                     , directory == 1.3.*
                     , process    >= 1.4 && < 1.6.4
  default-language:    Haskell2010


source-repository head
  type:     git
  location: git@github.com:agda/agda-ocaml.git
